# pyroute53myip

./: .gitignore  README.md  pyproject.toml  requests.txt
scripts/: compile_and_upload.sh  compile_only.sh  upload_pypi.sh
src/: main.py
src/pyroute53myip/: pyroute53myip.py
tests/: test_pyroute53myip.py
